--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../css/font.css" />
-  <link rel="stylesheet" href="../css/reset.css" />
-  <link rel="shortcut icon" href="../فایل/img/Untitled.png" width="10px" type="image/x-icon" />
-  <link rel="stylesheet" href="../css/app.css" />
-  <link rel="stylesheet" href="../css/grid.css" />
-  <link rel="stylesheet" href="../css/responsive.css" />
+  <link rel="stylesheet" href="css/font.css" />
+  <link rel="stylesheet" href="css/reset.css" />
+  <link rel="shortcut icon" href="فایل/img/Untitled.png" width="10px" type="image/x-icon" />
+  <link rel="stylesheet" href="css/app.css" />
+  <link rel="stylesheet" href="css/grid.css" />
+  <link rel="stylesheet" href="css/responsive.css" />
   <title>Document</title>
 </head>
 
@@ -176,7 +176,7 @@
     <div class="container">
       <div class="header-container">
         <a class="header__img1" href="header__img">
-          <img src="../../../../Downloads/arhiacode.png" alt="" />
+          <img src="../../../Downloads/arhiacode.png" alt="" />
         </a>
         <a class="header__img2 d-n" href="header__img">
           <img src="../فایل/img/bb.jpg" alt="" />
@@ -281,8 +281,8 @@
   </div>
 
 
-  <script src="../js/typed.js"></script>
-  <script src="../js/script.js"></script>
+  <script src="js/typed.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
