--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div class="container">
       <div class="header-container">
         <a class="header__img1" href="header__img">
-          <img src="../../../Downloads/arhiacode.png" alt="" />
+          <img src="../../Downloads/arhiacode.png" alt="" />
         </a>
         <a class="header__img2 d-n" href="header__img">
           <img src="../فایل/img/bb.jpg" alt="" />
@@ -225,7 +225,7 @@
   <div class="container">
     <maim class="main">
       <section id="home" class="home main-header">
-        <img width="400px" height="400px" src="../فایل/img/Lumii_۲۰۲۵۰۱۰۹_۱۶۳۴۱۷۹۵۴.jpg" alt="" />
+        <img width="400px" height="400px" src="فایل/img/Lumii_۲۰۲۵۰۱۰۹_۱۶۳۴۱۷۹۵۴.jpg" alt="" />
         <div class="main-about">
           <h3 class="main__Introduction">Arshia Saberi</h3>
           <h1 class="main__title">سلام من <span>عرشیا صابری</span> هستم</h1>
