--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div class="container">
       <div class="header-container">
         <a class="header__img1" href="header__img">
-          <img src="../../Downloads/arhiacode.png" alt="" />
+          <img src="../../../Downloads/arhiacode.png" alt="" />
         </a>
         <a class="header__img2 d-n" href="header__img">
           <img src="../فایل/img/bb.jpg" alt="" />
@@ -262,7 +262,7 @@
     <a href=""><svg>
         <use href="#telegram-2-fill"></use>
       </svg></a>
-    <a href="https://github.com/ArshiaSaberi">
+    <a href="https://github.com/ArshiaSaberi" target="_blank">
       <svg>
         <use href="#github-fill (1)"></use>
       </svg></a>
