index.htm img head

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div class="container">
       <div class="header-container">
         <a class="header__img1" href="header__img">
-          <img src="../../../Downloads/arhiacode.png" alt="" />
+          <img src="فایل/img/arhiacode.png" alt="" />
         </a>
         <a class="header__img2 d-n" href="header__img">
           <img src="../فایل/img/bb.jpg" alt="" />
